--- a/Back End/Mini-Action-Game/src/main/resources/application.properties
+++ b/Back End/Mini-Action-Game/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.url= jdbc:postgresql:///${PsqlDbName}
+spring.datasource.username= ${PsqlUserName}
+spring.datasource.password= ${PsqlPassword}
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto= create-drop
