--- a/Front End/mini-action-game/package.json
+++ b/Front End/mini-action-game/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-curved-text": "^2.0.2",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "universal-cookie": "^4.0.4",
