refactor -> items/heroes are shared objects

--- a/Back End/Mini-Action-Game/src/main/resources/application.properties
+++ b/Back End/Mini-Action-Game/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url= jdbc:postgresql:///${PsqlDbName}
-spring.datasource.username= ${PsqlUserName}
-spring.datasource.password= ${PsqlPassword}
+spring.datasource.url= jdbc:postgresql:///minigame
+spring.datasource.username= postgres
+spring.datasource.password= Mazdarx8....
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto= create-drop
