--- a/Front End/mini-action-game/package.json
+++ b/Front End/mini-action-game/package.json
@@ -10,7 +10,6 @@
     "react": "^18.2.0",
     "react-curved-text": "^2.0.2",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
@@ -40,6 +39,7 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.9.0"
+    "react-router-dom": "^6.9.0",
+    "react-scripts": "^5.0.1"
   }
 }
